# learning_fastapi

./: .gitignore  README.md  pyproject.toml
api_data_sales/: database.py  main.py
migrations/: env.py
migrations/versions/: 7c5295828d9c_create_users_table.py
